errors
make -C /lib/modules/4.15.0-22-generic/build M=/home/detamos/iodriver modules
make[1]: Entering directory '/usr/src/linux-headers-4.15.0-22-generic'
  CC [M]  /home/detamos/iodriver/iodriver.o
/home/detamos/iodriver/iodriver.c: In function ‘device_open’:
/home/detamos/iodriver/iodriver.c:64:2: error: implicit declaration of function ‘try_get_module’; did you mean ‘ref_module’? [-Werror=implicit-function-declaration]
  try_get_module(THIS_MODULE);
  ^~~~~~~~~~~~~~
  ref_module
/home/detamos/iodriver/iodriver.c: At top level:
/home/detamos/iodriver/iodriver.c:87:3: error: ‘struct file_operations’ has no member named ‘ioctl’
  .ioctl = device_ioctl,
   ^~~~~
/home/detamos/iodriver/iodriver.c:87:11: error: positional initialization of field in ‘struct’ declared with ‘designated_init’ attribute [-Werror=designated-init]
  .ioctl = device_ioctl,
           ^~~~~~~~~~~~
/home/detamos/iodriver/iodriver.c:87:11: note: (near initialization for ‘fops’)
/home/detamos/iodriver/iodriver.c:87:11: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
/home/detamos/iodriver/iodriver.c:87:11: note: (near initialization for ‘fops.read_iter’)
cc1: some warnings being treated as errors
scripts/Makefile.build:339: recipe for target '/home/detamos/iodriver/iodriver.o' failed
make[2]: *** [/home/detamos/iodriver/iodriver.o] Error 1
Makefile:1552: recipe for target '_module_/home/detamos/iodriver' failed
make[1]: *** [_module_/home/detamos/iodriver] Error 2
make[1]: Leaving directory '/usr/src/linux-headers-4.15.0-22-generic'
Makefile:4: recipe for target 'all' failed
make: *** [all] Error 2
